--- a/index.html
+++ b/index.html
@@ -13,6 +13,153 @@
 </head>
 
 <body>
+    <!-- HEADER -->
+    <header>
+
+        <!-- WELCOME -->
+        <section class="header__welcome bg-light">
+            <div class="wrap d-flex justify-content-between py-2">
+                <div>Chào mừng bạn đến với Apple Mart</div>
+                <div><i class="fa fa-map-marker-alt"></i> Đà Nẵng</div>
+            </div>
+        </section>
+
+        <!-- CENTER -->
+        <section>
+            <div class="wrap d-flex justify-content-between align-items-center my-2">
+                <div class="header__logo d-flex align-items-center">
+                    <i class="fa fa-stream me-3"></i>
+                    <h1 class="title__color">Apple Mart</h1>
+                </div>
+                <div class="header__search  input-group w-50">
+                    <span class="input-group-text border-0 background_color_second" style="background-color: white;"><i
+                            class="fa fa-search"></i></span>
+                    <input type="text" class="form-control border-0 background_color_second p-2"
+                        placeholder="Tìm kiếm sản phẩm">
+                    <span class="input-group-text background_color_second border-0"><i class="fa fa-list-ul"></i></span>
+                </div>
+                <div class="header__user text-end">
+                    <span class="me-2">
+                        <i class="fa fa-user"></i> Đăng nhập
+                    </span>
+                    |
+                    <span class="ms-2">
+                        <i class="fa fa-shopping-cart"></i> Giỏ hàng
+                    </span>
+                </div>
+            </div>
+        </section>
+        <hr class="m-0">
+        <!-- NAVIGATION BAR -->
+        <nav class="header__navbar navbar-expand-sm navbar-light my-2">
+            <div class="wrap">
+                <div class="container-fluid">
+                    <div class="navbar-toggler d-flex border-0">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <span class="navbar-toggler border-0" href="#" style="color: #777979;">Danh sách sản
+                            phẩm</span>
+                    </div>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav justify-content-between w-100">
+                            <li class="nav-item mx-4 text-center active">
+                                <a class="nav-link active" href="#">
+                                    Trang Chủ
+                                    <i class="fa fa-angle-down ps-2"></i>
+                                </a>
+                            </li>
+                            <li class="nav-item mx-4 text-center">
+                                <a class="nav-link active" href="#">
+                                    iPhone
+                                    <i class="fa fa-angle-down ps-2"></i>
+                                </a>
+                            </li>
+                            <li class="nav-item mx-4 text-center">
+                                <a class="nav-link active" href="#">
+                                    iPad
+                                    <i class="fa fa-angle-down ps-2"></i>
+                                </a>
+                            </li>
+                            <li class="nav-item mx-4 text-center">
+                                <a class="nav-link active" href="#">
+                                    MacBook
+                                    <i class="fa fa-angle-down ps-2"></i>
+                                </a>
+                            </li>
+                            <li class="nav-item mx-4 text-center">
+                                <a class="nav-link active" href="#">
+                                    AirPods
+                                    <i class="fa fa-angle-down ps-2"></i>
+                                </a>
+                            </li>
+                            <li class="nav-item mx-4 text-center">
+                                <a class="nav-link active" href="#">
+                                    Khác
+                                    <i class="fa fa-angle-down ps-2"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <hr>
+    </header>
+
+    <!-- CAROUSEL -->
+    <section class="carousel">
+        <div class="wrap">
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                        aria-label="Slide 4"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./img/14prm-apple-pc.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/ipad.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/macbook.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/watch.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </section>
+
+    <!-- CONTENT -->
+    <main>
+
+    </main>
+
+    <!-- FOOTER -->
+    <footer>
+
+    </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
