--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                     <span class="input-group-text background_color_second border-0"><i class="fa fa-list-ul"></i></span>
                 </div>
                 <div class="header__user text-end">
-                    <span class="me-2">
+                    <a class="me-2 text-decoration-none" href="./LOGIN/index.html">
                         <i class="fa fa-user"></i> Đăng nhập
-                    </span>
+                    </a>
                     |
                     <span class="ms-2">
                         <i class="fa fa-shopping-cart"></i> Giỏ hàng
@@ -582,11 +582,105 @@
                 </div>
             </div>
         </section>
+
+        <!-- PHỤ KIỆN -->
+        <section class="phukien">
+            <div class="wrap">
+                <div class="title d-flex justify-content-between align-items-end">
+                    <h5 class="title__color fw-bold">PHỤ KIỆN</h5>
+                    <a>
+                        <span>Xem tất cả</span>
+                        <span><i class="fa fa-angle-right ms-2"></i></span>
+                    </a>
+                </div>
+                <hr class="m-0">
+                <div class="product d-flex justify-content-between my-3">
+                    <div class="card mx-3">
+                        <div class="img d-flex justify-content-center align-items-center p-3">
+                            <img src="./img/oplung.webp" alt="">
+                        </div>
+                        <h5 class="text-center py-2 text-black">Ốp Lưng</h5>
+                    </div>
+                    <div class="card mx-3">
+                        <div class="img d-flex justify-content-center align-items-center p-3">
+                            <img src="./img/cusac.webp" alt="">
+                        </div>
+                        <h5 class="text-center py-2 text-black">Củ Sạc</h5>
+                    </div>
+                    <div class="card mx-3">
+                        <div class="img d-flex justify-content-center align-items-center p-3">
+                            <img src="./img/day-cap.webp" alt="">
+                        </div>
+                        <h5 class="text-center py-2 text-black">Dây Cáp</h5>
+                    </div>
+                    <div class="card mx-3">
+                        <div class="img d-flex justify-content-center align-items-center p-3">
+                            <img src="./img/ban-phim.webp" alt="">
+                        </div>
+                        <h5 class="text-center py-2 text-black">Bàn Phím</h5>
+                    </div>
+                    <div class="card mx-3">
+                        <div class="img d-flex justify-content-center align-items-center p-3">
+                            <img src="./img/chuot.png" alt="">
+                        </div>
+                        <h5 class="text-center py-2 text-black">Chuột</h5>
+                    </div>
+                    <div class="card mx-3">
+                        <div class="img d-flex justify-content-center align-items-center p-3">
+                            <img src="./img/apple-logo.png" alt="">
+                        </div>
+                        <h5 class="text-center py-2 text-black">Sản Phẩm Khác</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- FOOTER -->
     <footer>
-
+        <div class="wrap py-5">
+            <div class="row">
+                <div class="col-4">
+                    <h3>AppleMart</h3>
+                    <h5 class="pt-3">Liên Hệ</h5>
+                    <span class="d-flex py-3">
+                        <i class="fa fa-phone me-2"></i>
+                        <span>
+                            +84 773-605-741
+                            <br>
+                            +84 906-275-018
+                        </span>
+                    </span>
+                    <span class="d-flex py-3">
+                        <i class="fa fa-envelope me-2"></i>
+                        <span>
+                            anhtp.22it@vku.udn.vn
+                            <br>
+                            huent.22it@vku.udn.vn
+                        </span>
+                    </span>
+                    <span class="mt-5">
+                        <h5>Tải Ứng Dụng</h5>
+                        <img class="w-25" src="./img/Download_on_the_App_Store_logo.png" alt="">
+                        <img class="w-25" src="./img/R.png" alt="">
+                    </span>
+                </div>
+                <div class="col-4">
+                    <h5>Hỗ trợ dịch vụ</h5>
+                    <ul>
+                        <li><a href="#">Mua hàng trả góp</a></li>
+                        <li><a href="#">Hướng dẫn đặt hàng và thanh toán</a></li>
+                        <li><a href="#">Tra cứu đơn hàng</a></li>
+                        <li><a href="#">Chính sách bảo hành</a></li>
+                        <li><a href="#">Phạm vi, điều khoản trong gói bảo hành mở rộng</a></li>
+                        <li><a href="#">Chính sách bảo mật</a></li>
+                        <li><a href="#">Chính sách giải quyết khiếu nại</a></li>
+                        <li><a href="#">Điều khoản mua bán hàng hóa</a></li>
+                        <li><a href="#">Câu hỏi thường gặp</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
