--- a/LOGIN/index.html
+++ b/LOGIN/index.html
@@ -1,54 +1,46 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Login</title>	
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Login</title>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
   </script>
-  <link rel="stylesheet" 
-    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"> 
-  <script 
-    src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js">    
-  </script>            
-  
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js">
+  </script>
+
   <link href="./css/style.css" rel="stylesheet">
-  <script type="text/javascript" src="./jquery/index.js"></script> 
+  <script type="text/javascript" src="./jquery/index.js"></script>
 </head>
+
 <body>
   <div class="container-fluid bg">
     <div class="row justify-content-center">
       <div class="col-md-3 col-sm-6 col-xs-12 row-container">
         <form>
-          <h1>Login</h1>
+          <h1>ĐĂNG NHẬP</h1>
           <div class="form-group">
-            <label for="email">Username</label>
-            <input type="email" class="form-control" id="email" placeholder="Enter email">
+            <label for="email">Tên Đăng nhập</label>
+            <input type="email" class="form-control" id="email" placeholder="Nhập email">
             <p class="emailError"></p>
           </div>
           <div class="form-group">
-            <label for="password" class="label">Password</label>
-            <input type="password" class="form-control" id="password" placeholder="Password">            
+            <label for="password" class="label">Mật Khẩu</label>
+            <input type="password" class="form-control" id="password" placeholder="Mật Khẩu">
             <p class="passwordError"></p>
           </div>
           <div class="form-check">
             <input type="checkbox" class="form-check-input" id="rememberMe">
-            <label class="form-check-label" for="rememberMe">Check me out</label>
-          </div>   
-          <button type="submit" class="btn btn-custom btn-block my-3">Login</button>
+            <label class="form-check-label" for="rememberMe">Ghi nhớ</label>
+          </div>
+          <button type="submit" class="btn btn-custom btn-block my-3">Đăng nhập</button>
         </form>
       </div>
     </div>
   </div>
 </body>
-</html>	
 
-
-
-
-
-
-
-
-
+</html>
