complete responsive for mobile

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
                         placeholder="Tìm kiếm sản phẩm">
                     <span class="input-group-text background_color_second border-0"><i class="fa fa-list-ul"></i></span>
                 </div>
-                <div class="header__user text-end">
+                <div class="header__user ms-2">
                     <a class="me-2 text-decoration-none" href="./LOGIN/index.html">
                         <i class="fa fa-user"></i> Đăng nhập
                     </a>
-                    |
-                    <span class="ms-2">
+                    <span class="header__user__line mx-2">|</span>
+                    <span>
                         <i class="fa fa-shopping-cart"></i> Giỏ hàng
                     </span>
                 </div>
@@ -221,15 +221,15 @@
                     <nav aria-label="Page navigation example">
                         <ul class="pagination">
                             <li class="page-item">
-                                <button class="page-link mx-2" href="#" aria-label="Previous">
+                                <button class="page-link mx-2" aria-label="Previous">
                                     <span aria-hidden="true">&laquo;</span>
                                 </button>
                             </li>
-                            <li class="page-item active"><a class="page-link mx-2" href="#">1</a></li>
-                            <li class="page-item"><a class="page-link mx-2" href="#">2</a></li>
-                            <li class="page-item"><a class="page-link mx-2" href="#">3</a></li>
+                            <li class="page-item active"><button class="page-link mx-2">1</button></li>
+                            <li class="page-item"><button class="page-link mx-2">2</button></li>
+                            <li class="page-item"><button class="page-link mx-2">3</button></li>
                             <li class="page-item">
-                                <button class="page-link mx-2" href="#" aria-label="Next">
+                                <button class="page-link mx-2" aria-label="Next">
                                     <span aria-hidden="true">&raquo;</span>
                                 </button>
                             </li>
@@ -307,15 +307,15 @@
                     <nav aria-label="Page navigation example">
                         <ul class="pagination">
                             <li class="page-item">
-                                <button class="page-link mx-2" href="#" aria-label="Previous">
+                                <button class="page-link mx-2" aria-label="Previous">
                                     <span aria-hidden="true">&laquo;</span>
                                 </button>
                             </li>
-                            <li class="page-item active"><a class="page-link mx-2" href="#">1</a></li>
-                            <li class="page-item"><a class="page-link mx-2" href="#">2</a></li>
-                            <li class="page-item"><a class="page-link mx-2" href="#">3</a></li>
+                            <li class="page-item active"><button class="page-link mx-2">1</button></li>
+                            <li class="page-item"><button class="page-link mx-2">2</button></li>
+                            <li class="page-item"><button class="page-link mx-2">3</button></li>
                             <li class="page-item">
-                                <button class="page-link mx-2" href="#" aria-label="Next">
+                                <button class="page-link mx-2" aria-label="Next">
                                     <span aria-hidden="true">&raquo;</span>
                                 </button>
                             </li>
@@ -393,15 +393,15 @@
                     <nav aria-label="Page navigation example">
                         <ul class="pagination">
                             <li class="page-item">
-                                <button class="page-link mx-2" href="#" aria-label="Previous">
+                                <button class="page-link mx-2" aria-label="Previous">
                                     <span aria-hidden="true">&laquo;</span>
                                 </button>
                             </li>
-                            <li class="page-item active"><a class="page-link mx-2" href="#">1</a></li>
-                            <li class="page-item"><a class="page-link mx-2" href="#">2</a></li>
-                            <li class="page-item"><a class="page-link mx-2" href="#">3</a></li>
+                            <li class="page-item active"><button class="page-link mx-2">1</button></li>
+                            <li class="page-item"><button class="page-link mx-2">2</button></li>
+                            <li class="page-item"><button class="page-link mx-2">3</button></li>
                             <li class="page-item">
-                                <button class="page-link mx-2" href="#" aria-label="Next">
+                                <button class="page-link mx-2" aria-label="Next">
                                     <span aria-hidden="true">&raquo;</span>
                                 </button>
                             </li>
@@ -479,15 +479,15 @@
                     <nav aria-label="Page navigation example">
                         <ul class="pagination">
                             <li class="page-item">
-                                <button class="page-link mx-2" href="#" aria-label="Previous">
+                                <button class="page-link mx-2" aria-label="Previous">
                                     <span aria-hidden="true">&laquo;</span>
                                 </button>
                             </li>
-                            <li class="page-item active"><a class="page-link mx-2" href="#">1</a></li>
-                            <li class="page-item"><a class="page-link mx-2" href="#">2</a></li>
-                            <li class="page-item"><a class="page-link mx-2" href="#">3</a></li>
+                            <li class="page-item active"><button class="page-link mx-2">1</button></li>
+                            <li class="page-item"><button class="page-link mx-2">2</button></li>
+                            <li class="page-item"><button class="page-link mx-2">3</button></li>
                             <li class="page-item">
-                                <button class="page-link mx-2" href="#" aria-label="Next">
+                                <button class="page-link mx-2" aria-label="Next">
                                     <span aria-hidden="true">&raquo;</span>
                                 </button>
                             </li>
@@ -565,15 +565,15 @@
                     <nav aria-label="Page navigation example">
                         <ul class="pagination">
                             <li class="page-item">
-                                <button class="page-link mx-2" href="#" aria-label="Previous">
+                                <button class="page-link mx-2" aria-label="Previous">
                                     <span aria-hidden="true">&laquo;</span>
                                 </button>
                             </li>
-                            <li class="page-item active"><a class="page-link mx-2" href="#">1</a></li>
-                            <li class="page-item"><a class="page-link mx-2" href="#">2</a></li>
-                            <li class="page-item"><a class="page-link mx-2" href="#">3</a></li>
+                            <li class="page-item active"><button class="page-link mx-2">1</button></li>
+                            <li class="page-item"><button class="page-link mx-2">2</button></li>
+                            <li class="page-item"><button class="page-link mx-2">3</button></li>
                             <li class="page-item">
-                                <button class="page-link mx-2" href="#" aria-label="Next">
+                                <button class="page-link mx-2" aria-label="Next">
                                     <span aria-hidden="true">&raquo;</span>
                                 </button>
                             </li>
@@ -594,38 +594,38 @@
                     </a>
                 </div>
                 <hr class="m-0">
-                <div class="product d-flex justify-content-between my-3">
-                    <div class="card mx-3">
+                <div class="phukien__product row justify-content-around my-3">
+                    <div class="card mx-0 col-4 col-lg-2">
                         <div class="img d-flex justify-content-center align-items-center p-3">
                             <img src="./img/oplung.webp" alt="">
                         </div>
                         <h5 class="text-center py-2 text-black">Ốp Lưng</h5>
                     </div>
-                    <div class="card mx-3">
+                    <div class="card mx-0 col-4 col-lg-2">
                         <div class="img d-flex justify-content-center align-items-center p-3">
                             <img src="./img/cusac.webp" alt="">
                         </div>
                         <h5 class="text-center py-2 text-black">Củ Sạc</h5>
                     </div>
-                    <div class="card mx-3">
+                    <div class="card mx-0 col-4 col-lg-2">
                         <div class="img d-flex justify-content-center align-items-center p-3">
                             <img src="./img/day-cap.webp" alt="">
                         </div>
                         <h5 class="text-center py-2 text-black">Dây Cáp</h5>
                     </div>
-                    <div class="card mx-3">
+                    <div class="card mx-0 col-4 col-lg-2">
                         <div class="img d-flex justify-content-center align-items-center p-3">
                             <img src="./img/ban-phim.webp" alt="">
                         </div>
                         <h5 class="text-center py-2 text-black">Bàn Phím</h5>
                     </div>
-                    <div class="card mx-3">
+                    <div class="card mx-0 col-4 col-lg-2">
                         <div class="img d-flex justify-content-center align-items-center p-3">
                             <img src="./img/chuot.png" alt="">
                         </div>
                         <h5 class="text-center py-2 text-black">Chuột</h5>
                     </div>
-                    <div class="card mx-3">
+                    <div class="card mx-0 col-4 col-lg-2">
                         <div class="img d-flex justify-content-center align-items-center p-3">
                             <img src="./img/apple-logo.png" alt="">
                         </div>
@@ -640,23 +640,23 @@
     <footer>
         <div class="wrap py-5">
             <div class="row">
-                <div class="col-4">
+                <div class="col-6">
                     <h3>AppleMart</h3>
                     <h5 class="pt-3">Liên Hệ</h5>
                     <span class="d-flex py-3">
                         <i class="fa fa-phone me-2"></i>
                         <span>
-                            +84 773-605-741
+                            <a href="tel:+84 773-605-741">+84 773-605-741</a>
                             <br>
-                            +84 906-275-018
+                            <a href="tel:+84 906-275-018">+84 906-275-018</a>
                         </span>
                     </span>
                     <span class="d-flex py-3">
                         <i class="fa fa-envelope me-2"></i>
                         <span>
-                            anhtp.22it@vku.udn.vn
+                            <a href="mailto:anhtp.22it@vku.udn.vn">anhtp.22it@vku.udn.vn</a>
                             <br>
-                            huent.22it@vku.udn.vn
+                            <a href="mailto:huent.22it@vku.udn.vn">huent.22it@vku.udn.vn</a>
                         </span>
                     </span>
                     <span class="mt-5">
@@ -665,7 +665,7 @@
                         <img class="w-25" src="./img/R.png" alt="">
                     </span>
                 </div>
-                <div class="col-4">
+                <div class="col-6">
                     <h5>Hỗ trợ dịch vụ</h5>
                     <ul>
                         <li><a href="#">Mua hàng trả góp</a></li>
