--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </section>
         <hr class="m-0">
         <!-- NAVIGATION BAR -->
-        <nav class="header__navbar navbar-expand-sm navbar-light my-2">
+        <nav class="header__navbar navbar-expand-md navbar-light my-2">
             <div class="wrap">
                 <div class="container-fluid">
                     <div class="navbar-toggler d-flex border-0">
@@ -65,40 +65,40 @@
                     </div>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav justify-content-between w-100">
-                            <li class="nav-item mx-2 text-center active">
+                            <li class="nav-item mx-1 mx-lg-2 text-center active">
                                 <a class="nav-link active" href="#">
                                     Trang Chủ
-                                    <i class="fa fa-angle-down ps-2"></i>
+                                    <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
                                 </a>
                             </li>
-                            <li class="nav-item mx-2 text-center">
+                            <li class="nav-item mx-1 mx-lg-2 text-center">
                                 <a class="nav-link active" href="#">
                                     iPhone
-                                    <i class="fa fa-angle-down ps-2"></i>
+                                    <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
                                 </a>
                             </li>
-                            <li class="nav-item mx-2 text-center">
+                            <li class="nav-item mx-1 mx-lg-2 text-center">
                                 <a class="nav-link active" href="#">
                                     iPad
-                                    <i class="fa fa-angle-down ps-2"></i>
+                                    <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
                                 </a>
                             </li>
-                            <li class="nav-item mx-2 text-center">
+                            <li class="nav-item mx-1 mx-lg-2 text-center">
                                 <a class="nav-link active" href="#">
                                     MacBook
-                                    <i class="fa fa-angle-down ps-2"></i>
+                                    <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
                                 </a>
                             </li>
-                            <li class="nav-item mx-2 text-center">
+                            <li class="nav-item mx-1 mx-lg-2 text-center">
                                 <a class="nav-link active" href="#">
                                     AirPods
-                                    <i class="fa fa-angle-down ps-2"></i>
+                                    <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
                                 </a>
                             </li>
-                            <li class="nav-item mx-2 text-center">
+                            <li class="nav-item mx-1 mx-lg-2 text-center">
                                 <a class="nav-link active" href="#">
                                     Khác
-                                    <i class="fa fa-angle-down ps-2"></i>
+                                    <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
                                 </a>
                             </li>
                         </ul>
