do choose__product iphone14.html

--- a/DES_PRODUCT/iphone14.html
+++ b/DES_PRODUCT/iphone14.html
@@ -39,7 +39,7 @@
                     <span class="input-group-text background_color_second border-0"><i class="fa fa-list-ul"></i></span>
                 </div>
                 <div class="header__user ms-2">
-                    <a class="me-2 text-decoration-none" href="./LOGIN/index.html">
+                    <a class="me-2 text-decoration-none" href="../LOGIN/index.html">
                         <i class="fa fa-user"></i> Đăng nhập
                     </a>
                     <span class="header__user__line mx-2">|</span>
@@ -145,7 +145,18 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-8">Right</div>
+                    <div class="col-6">
+                        <div class="mb-2">
+                            <h4 class="price__color fw-bold d-inline">20.000.000đ</h4> / Giá đã bao gồm 10% VAT
+                        </div>
+                        <div class="text-white text-center py-1 mb-2 w-75">
+                            Miễn phí vận chuyển toàn quốc <i class="fa fa-shipping-fast text-white"></i>
+                        </div>
+                        <div class="mb-2 choose__product__version">
+                            <h6 class="text-black fw-bold">Lựa chọn phiên bản</h6>
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
