--- a/DES_PRODUCT/iphone14.html
+++ b/DES_PRODUCT/iphone14.html
@@ -121,15 +121,15 @@
             </div>
             <div class="choose__product">
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-12 col-lg-4">
                         <div class="card border-0">
                             <div class="img p-5">
                                 <img src="./img/iPhone_14_Pro.webp" class="card-img-top" alt="...">
                             </div>
                             <div class="card-body">
                                 <div class="row align-items-center">
-                                    <div class="col"><button class="border-0 h-100 p-3"><i
-                                                class="fa fa-caret-left"></i></button>
+                                    <div class="col">
+                                        <button class="border-0 h-100 p-3"><i class="fa fa-caret-left"></i></button>
                                     </div>
                                     <div class="col"><img src="./img/iPhone_14_Pro.webp" class="card-img-top" alt="...">
                                     </div>
@@ -139,25 +139,160 @@
                                     </div>
                                     <div class="col"><img src="./img/iPhone_14_Pro.webp" class="card-img-top" alt="...">
                                     </div>
-                                    <div class="col"><button class="border-0 h-100 p-3"><i
-                                                class="fa fa-caret-right"></i></button></div>
+                                    <div class="col">
+                                        <button class="border-0 h-100 p-3"><i class="fa fa-caret-right"></i></button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-12 col-lg-6 m-auto">
                         <div class="mb-2">
                             <h4 class="price__color fw-bold d-inline">20.000.000đ</h4> / Giá đã bao gồm 10% VAT
                         </div>
-                        <div class="text-white text-center py-1 mb-2 w-75">
+                        <div class="text-white text-center py-1 mb-2">
                             Miễn phí vận chuyển toàn quốc <i class="fa fa-shipping-fast text-white"></i>
                         </div>
                         <div class="mb-2 choose__product__version">
                             <h6 class="text-black fw-bold">Lựa chọn phiên bản</h6>
-
+                            <div class="radio-buttons">
+                                <div class="version form-check-inline py-1 px-2 rounded-3">
+                                    <div>
+                                        <input type="radio" name="phone-version" id="phone-version-128GB" value="128GB">
+                                        <label class="form-check-label" for="phone-version-128GB">128GB</label>
+                                    </div>
+                                    <strong class="price__color d-block ps-0">20.000.000</strong>
+                                </div>
+                                <div class="version form-check-inline py-1 px-2 rounded-3">
+                                    <div>
+                                        <input type="radio" name="phone-version" id="phone-version-256GB" value="256GB">
+                                        <label class="form-check-label" for="phone-version-256GB">256GB</label>
+                                    </div>
+                                    <strong class="price__color d-block ps-0">20.000.000</strong>
+                                </div>
+                                <div class="version form-check-inline py-1 px-2 rounded-3">
+                                    <div>
+                                        <input type="radio" name="phone-version" id="phone-version-512GB" value="512GB">
+                                        <label class="form-check-label" for="phone-version-512GB">512GB</label>
+                                    </div>
+                                    <strong class="price__color d-block ps-0">20.000.000</strong>
+                                </div>
+                                <div class="version form-check-inline py-1 px-2 rounded-3">
+                                    <div>
+                                        <input type="radio" name="phone-version" id="phone-version-1024GB"
+                                            value="1024GB">
+                                        <label class="form-check-label" for="phone-version-1024GB">1024GB</label>
+                                    </div>
+                                    <strong class="price__color d-block ps-0">20.000.000</strong>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mb-4 choose__product__version">
+                            <h6 class="text-black fw-bold">Lựa chọn màu sắc</h6>
+                            <div class="">
+                                <div class="version form-check-inline py-1 px-2 rounded-3">
+                                    <div>
+                                        <input type="radio" name="phone-version" id="phone-white" value="white">
+                                        <label class="form-check-label" for="phone-white">White</label>
+                                    </div>
+                                    <strong class="price__color d-block ps-0">20.000.000</strong>
+                                </div>
+                                <div class="version form-check-inline py-1 px-2 rounded-3">
+                                    <div>
+                                        <input type="radio" name="phone-version" id="phone-green" value="256GB">
+                                        <label class="form-check-label" for="phone-green">Green</label>
+                                    </div>
+                                    <strong class="price__color d-block ps-0">20.000.000</strong>
+                                </div>
+                                <div class="version form-check-inline py-1 px-2 rounded-3">
+                                    <div>
+                                        <input type="radio" name="phone-version" id="phone-blue" value="512GB">
+                                        <label class="form-check-label" for="phone-blue">Blue</label>
+                                    </div>
+                                    <strong class="price__color d-block ps-0">20.000.000</strong>
+                                </div>
+                                <div class="version form-check-inline py-1 px-2 rounded-3">
+                                    <div>
+                                        <input type="radio" name="phone-version" id="phone-pink" value="1024GB">
+                                        <label class="form-check-label" for="phone-pink">Pink</label>
+                                    </div>
+                                    <strong class="price__color d-block ps-0">20.000.000</strong>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="product__offer position-relative w-100 h-100 rounded-2 mb-3">
+                            <div class="offer__title position-absolute text-white rounded-pill px-3">
+                                Khuyến mãi
+                            </div>
+                            <ul class="mt-3">
+                                <li>50%</li>
+                                <li>50%</li>
+                                <li>50%</li>
+                            </ul>
+                        </div>
+                        <div class="choose__product__button">
+                            <div class="row mb-1">
+                                <div class="col">
+                                    <button class="w-100 rounded-pill" id="buyNow">
+                                        <div><strong>MUA NGAY</strong></div>
+                                        <div>(GIAO TẬN NƠI HOẶC LẤY TẠI CỬA HÀNG)</div>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <button class="w-100 rounded-pill" id="installment">
+                                        <div><strong>TRẢ GÓP</strong></div>
+                                        <div class="d-none d-md-block">(VISA HOẶC CÔNG TY TÀI CHÍNH)</div>
+                                    </button>
+                                </div>
+                                <div class="col">
+                                    <button class="w-100 rounded-pill" id="addCart">
+                                        <div><strong><i class="fa fa-cart-plus"></i></strong></div>
+                                        <div>(THÊM VÀO GIỎ HÀNG)</div>
+                                    </button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
+            </div>
+            <hr class="my-5">
+            <div class="row flex-row-reverse">
+                <div class="col-12 col-md-3">
+                    <table class="table">
+                        <legend>Thông số kĩ thuật</legend>
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">First</th>
+                                <th scope="col">Last</th>
+                                <th scope="col">Handle</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>Mark</td>
+                                <td>Otto</td>
+                                <td>@mdo</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">2</th>
+                                <td>Jacob</td>
+                                <td>Thornton</td>
+                                <td>@fat</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">3</th>
+                                <td>Larry</td>
+                                <td>the Bird</td>
+                                <td>@twitter</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col-12 col-md-7">Left</div>
             </div>
         </div>
     </main>
@@ -211,6 +346,9 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.js"
+        integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
