iphone14.html and fix index.html

--- a/DES_PRODUCT/iphone14.html
+++ b/DES_PRODUCT/iphone14.html
@@ -8,6 +8,7 @@
     <meta name="Description" content="Enter your description here" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="CSS/style.css">
     <title>iPhone 14</title>
 </head>
@@ -243,7 +244,7 @@
                                 <div class="col">
                                     <button class="w-100 rounded-pill" id="installment">
                                         <div><strong>TRẢ GÓP</strong></div>
-                                        <div class="d-none d-md-block">(VISA HOẶC CÔNG TY TÀI CHÍNH)</div>
+                                        <div class="d-md-block">(VISA)</div>
                                     </button>
                                 </div>
                                 <div class="col">
@@ -258,41 +259,236 @@
                 </div>
             </div>
             <hr class="my-5">
-            <div class="row flex-row-reverse">
-                <div class="col-12 col-md-3">
-                    <table class="table">
-                        <legend>Thông số kĩ thuật</legend>
-                        <thead>
-                            <tr>
-                                <th scope="col">#</th>
-                                <th scope="col">First</th>
-                                <th scope="col">Last</th>
-                                <th scope="col">Handle</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row">1</th>
-                                <td>Mark</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">2</th>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>@fat</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">3</th>
-                                <td>Larry</td>
-                                <td>the Bird</td>
-                                <td>@twitter</td>
-                            </tr>
-                        </tbody>
-                    </table>
+            <div class="specifications row flex-row-reverse justify-content-around mb-3">
+                <div class="specifications__right col-12 col-lg-4 rounded-3">
+                    <div class="wrapper shadow py-3">
+                        <h5 class="text-black fw-bold">Thông số kỹ thuật iPhone 14
+                            ProMax
+                            (256GB) - Chính hãng VNA</h5>
+                        <div class="card border-0">
+                            <img src="./img/iPhone_14_Pro.webp" class="card-img-top p-5" alt="...">
+                            <div class="card-body d-flex flex-column">
+                                <button class="btn shadow rounded-3 my-3 fw-bold">
+                                    <i class="fa fa-wrench title__color mx-2"></i>Cấu hình chi tiết
+                                </button>
+                                <div class="card-text">
+                                    <div>
+                                        <strong>Công nghệ màn hình: </strong> OLED
+                                    </div>
+                                    <div>
+                                        <strong>Độ phân giải: </strong> 2796 x 1290 Pixels
+                                    </div>
+                                    <div>
+                                        <strong>Màn hình rộng: </strong> 6.7"
+                                    </div>
+                                    <div>
+                                        <strong>Độ phân giải: </strong> Chính 48 MP & Phụ 12 MP, 12 MP, 12 MP
+                                    </div>
+                                    <div>
+                                        <strong>Hệ điều hành: </strong> iOS 16
+                                    </div>
+                                    <div>
+                                        <strong>Chip xử lý (CPU): </strong> Apple A16 Bionic 6 nhân
+                                    </div>
+                                    <div>
+                                        <strong>Bộ nhớ trong (ROM): </strong> 256GB
+                                    </div>
+                                    <div>
+                                        <strong>RAM: </strong> 6 GB
+                                    </div>
+                                    <div>
+                                        <strong>Mạng di động: </strong> Hỗ trợ 5G
+                                    </div>
+                                    <div>
+                                        <strong>Số khe sim: </strong> 1 Nano SIM & 1 eSIM
+                                    </div>
+                                    <div>
+                                        <strong>Dung lượng pin: </strong> 4323 mAh
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-12 col-md-7">Left</div>
+                <div class="specifications__left col-12 col-lg-7 shadow pt-4">
+                    <div class="specifications__left__content overflow-hidden">
+                        <p>Tất cả iPhone chính hãng VN/A được phân phối tại Apple Mart đều được nhập trực tiếp từ Công
+                            ty TNHH Apple Việt Nam. HoangHa Mobile là nhà bán lẻ ủy quyền chính thức của Apple tại Việt
+                            Nam.
+                        </p>
+                        <div><img src="./img/tem.jpeg" alt="tem xác nhận" class="w-100 h-auto"></div>
+                        <h5 class="fw-bold my-3">Tem ICT có trên các sản phẩm iPhone chính hãng VN/A</h5>
+                        <h2 class="fw-bold">Mua iPhone 14 Pro Max chính hãng VN/A, giá rẻ tại Apple Mart</h2>
+                        <p>iPhone 14 Pro Max VN/A là dòng sản phẩm cao cấp nhất nằm trong thế hệ iPhone 14 Series mới
+                            vừa
+                            được ra mắt cùng với nhiều nâng cấp về ngoại hình và tính năng, hứa hẹn sẽ là dòng sản phẩm
+                            đột
+                            phá trong vài năm trở lại đây của Apple.</p>
+                        <div><img src="./img/ip14_front.jpeg" alt="Mặt trước của iPhone 14 ProMax" class="w-100"></div>
+                        <strong>iPhone 14 Pro Max VN/A</strong>
+                        <h4 class="fw-bold my-3">Phá vỡ thiết kế notch cổ điển</h4>
+                        <p>Chiếc iPhone 14 Pro Max VN/A sở hữu màn hình Super Retina XDR mới với ProMotion có kích thước
+                            6.7
+                            inch. Tần số quét màn hình sẽ giảm xuống 1 Hz để tiết kiệm pin, trong khi hình nền được làm
+                            mờ.
+                            Màn hình tiên tiến cũng mang lại mức độ sáng HDR cao nhất tương tự như Pro Display XDR và
+                            ​​độ
+                            sáng đỉnh ngoài trời cao nhất trong điện thoại thông minh: lên đến 2000 nits, sáng gấp đôi
+                            so
+                            với người tiền nhiệm.</p>
+                        <p>Màn hình trước làm từ chất liệu Ceramic Shield - cứng hơn bất kỳ loại kính điện thoại thông
+                            minh
+                            nào - và được bảo vệ khỏi các sự cố tràn và tai nạn thông thường với khả năng chống nước và
+                            bụi.
+                        </p>
+                        <p>Màn hình Dynamic Island mới trên dòng iPhone 14 Pro được coi là ý tưởng thiết kế sáng tạo,
+                            đem
+                            đến trải nghiệm độc đáo. Apple đã thay thế phần notch trên dòng sản phẩm ‌iPhone 14 Pro‌
+                            bằng lỗ
+                            khuyết viên thuốc và đục lỗ. Một chi tiết mới quan trọng của việc thay thế notch xuất hiện
+                            trong
+                            tuần này là khi thiết bị được sử dụng, các lỗ hình viên thuốc và lỗ đục lỗ sẽ hợp nhất bằng
+                            kỹ
+                            thuật số thành hình chữ i dài hơn. Phần cắt này được Apple dùng để hiển thị thông tin như
+                            các
+                            thông báo về quyền riêng tư của iOS và cụm cảm biến cho FaceID</p>
+                        <p>Ngoài ra, iPhone 14 Pro Max VN/A còn có tính năng Always On Display hay màn hình luôn bật,
+                            đây là
+                            một trong những tính năng khá thú vị trên các dòng điện thoại hiện nay. Tính năng này không
+                            chỉ
+                            giúp bạn nhận được thông báo từ các ứng dụng như đồng hồ, lịch, tin nhắn, cuộc gọi nhỡ, ứng
+                            dụng,... kể cả khi màn hình điện thoại đã tắt mà còn giúp điện thoại tiết kiệm pin đáng kể.
+                        </p>
+                        <h4 class="fw-bold my-3">Nâng cấp đáng kể về camera</h4>
+                        <p>Một trong những nâng cấp mà người dùng trông đợi nhất từ dòng iPhone 14 đó chính là camera.
+                            Sau
+                            nhiều năm camera dặm chân ở con số 12MP, độ phân giải camera chính của iPhone 14 Pro Max
+                            VN/A đã
+                            được nâng cấp lên thành 48MP cùng điểm ảnh 1,4µm. Sự nâng cấp này cho phép camera thu được
+                            nhiều
+                            ánh sáng hơn khi chụp ảnh trong điều kiện ánh sáng yếu.</p>
+                        <div><img src="./img/camera.jpeg" alt="Camera iPhone 14 ProMax" class="w-100"></div>
+                        <strong>iPhone 14 Pro Max VN/A có nâng cấp đáng kể về camera</strong>
+                        <h4 class="my-3"></h4>
+                        <span class="">Ngoài ra, điện thoại còn hỗ trợ quay video 8K (ở tốc độ lên đến 60 khung
+                            hình/giây), không chỉ
+                            đem lại hình ảnh sắc nét hơn (như tăng chất lượng trên video YouTube) mà còn cho phép các
+                            nhà
+                            làm phim cắt, ổn định và điều chỉnh lại cảnh quay sau khi nó được quay.</span>
+                        <ul>
+                            <li class="my-2">Máy ảnh chính được nâng cấp lên thành 48MP cùng điểm ảnh 1,4µm, đi kèm
+                                pixel-binning (kết
+                                hợp pixel với nhau) cho phép camera thu được nhiều ánh sáng hơn và giảm nhiễu</li>
+                            <li class="my-2">Máy ảnh 12MP Ultra Wide mới với điểm ảnh 1,4 µm pixel, mang lại hình ảnh
+                                sắc
+                                nét hơn với
+                                nhiều chi tiết hơn, cải thiện khả năng chụp ảnh macro vốn đã mạnh mẽ.</li>
+                            <li class="my-2">Máy ảnh tele cải tiến có khả năng zoom quang học 3x.</li>
+                            <li class="my-2">Một camera TrueDepth phía trước mới với khẩu độ ƒ / 1.9 cho phép chụp ảnh
+                                và
+                                quay video
+                                trong điều kiện ánh sáng yếu tốt hơn. Sử dụng lấy nét tự động lần đầu tiên, nó có thể
+                                lấy
+                                nét nhanh hơn nữa trong điều kiện ánh sáng yếu và chụp ảnh nhóm từ xa hơn.</li>
+                            <li class="my-2">Đèn flash True Tone thích ứng mới đã được thiết kế lại hoàn toàn với một
+                                dãy
+                                chín đèn LED
+                                thay đổi kiểu dựa trên độ dài tiêu cự đã chọn.</li>
+                            <li class="my-2">Hỗ trợ chụp ảnh tiên tiến như Chế độ ban đêm, Smart HDR 4, Chế độ chân dung
+                                với
+                                Ánh sáng
+                                chân dung, Chế độ ban đêm Ảnh chân dung, Kiểu chụp ảnh để cá nhân hóa giao diện của mọi
+                                bức
+                                ảnh và Apple ProRAW.</li>
+                            <li class="my-2">Chế độ Action mới cho video trông cực kỳ mượt mà có thể giảm độ rung, cho
+                                ra
+                                những khung
+                                hình mượt mà sống động</li>
+                            <li class="my-2">Chế độ Cinematic, hiện có sẵn ở 4K ở tốc độ 30 khung hình / giây và 4K ở
+                                tốc độ
+                                24 khung
+                                hình / giây.</li>
+                            <li class="my-2">Tính năng định dạng video chuyên nghiệp, bao gồm ProRes3 và Dolby Vision
+                                HDR
+                                đầu cuối.</li>
+                        </ul>
+                        <h4 class="fw-bold my-3">Bộ vi xử lý A16 cực xịn</h4>
+                        <p>iPhone 14 Pro Max VN/A sử dụng bộ vi xử lý Apple A16 Bionic được xử lý trên tiến trình 4nm.
+                            Với
+                            bộ xử lý neural 16 nhân trên chip này, bên cạnh bộ xử lý màn hình hoàn toàn mới để hỗ trợ
+                            đẩy
+                            tần số quét xuống 1Hz, xử lý tính năng always-on và giúp Dynamic Island hoạt động mượt
+                            mà.Thiết
+                            bị có RAM 6GB sử dụng công nghệ LPDDR5 cải tiến về tốc độ truyền và điện năng tiêu thụ.</p>
+                        <div><img src="./img/ip14.jpeg" alt="iPhone 14 ProMax" class="w-100"></div>
+                        <strong>iPhone 14 Pro Max VN/A</strong>
+                        <h4 class="fw-bold my-3">Tính năng điện thoại vệ tinh</h4>
+                        <p>Điểm độc đáo trên thế hệ <strong>iPhone 14 Series</strong> chính là điện thoại vệ tinh hỗ trợ
+                            người dùng trong
+                            việc liên lạc bằng cách kết nối với các trạm vệ tinh xoay quanh quỹ đạo mà không cần sóng
+                            của
+                            nhà mạng.</p>
+                        <p>iPhone 14 Pro Max VN/A có dung lượng 4.323 mAh – thấp hơn một chút so với mức 4.352 mAh của
+                            13
+                            Pro Max. Ngoài ra, thiết bị được trang bị sạc nhanh với công suất 30W, cao hơn đáng kể so
+                            với
+                            mức sạc 20W cũ.</p>
+                        <p>iPhone 14 Pro Max VN/A hiện là chiếc flagship có trọng lượng nặng nhất trên thị trường với
+                            khối
+                            lượng 255 gram, cao hơn 15 gram so với thế hệ trước. Người dùng có tùy chọn các phiên bản
+                            dung
+                            lượng gồm 128 GB, 256 GB, 512 GB và 1TB. Thiết bị sử dụng phần khung titan thay vì thép
+                            không
+                            gỉ, mang đến một chiếc iPhone mạnh mẽ hơn, nhẹ hơn và chống trầy tốt hơn, dù làm tăng khối
+                            lượng.</p>
+                        <p>iPhone 14 Pro Max VN/A sẽ có các lựa chọn màu sắc: xám than chì (Graphite), bạc (Silver),
+                            vàng
+                            (Gold), tím (Purple), nhưng không có phiên bản màu xanh Sierra Blue như năm ngoái.</p>
+                    </div>
+                    <button type="button" id="collapse__specifications__left"
+                        class="btn__minimize btn d-block w-100 bg-white shadow-none">
+                        <strong class="title__color">THU GỌN</strong>
+                    </button>
+                    <button type="button" id="collapse__specifications__left"
+                        class="btn__zoom btn d-block w-100 bg-white shadow-none d-none">
+                        <strong class="title__color">PHÓNG TO</strong>
+                    </button>
+                </div>
+            </div>
+            <div class="comment my-3">
+                <div class="title d-flex justify-content-between align-items-end">
+                    <h5 class="title__color fw-bold">BÌNH LUẬN</h5>
+                    <a>
+                        <span>Xem tất cả</span>
+                        <span><i class="fa fa-angle-right ms-2"></i></span>
+                    </a>
+                </div>
+                <hr class="m-0">
+                <form action="" class="my-3">
+                    <div class="row mb-3">
+                        <div class="col-4 d-flex">
+                            <input type="text" class="form-control shadow-none" placeholder="Họ tên*">
+                        </div>
+                        <div class="col-4">
+                            <input type="text" class="form-control shadow-none" placeholder="Điện thoại">
+                        </div>
+                        <div class="col-4">
+                            <input type="text" class="form-control shadow-none" placeholder="Email">
+                        </div>
+                    </div>
+                    <div class="row mb-3 align-items-end">
+                        <div class="col">
+                            <textarea class="form-control shadow-none" name="" id="" rows="3"
+                                placeholder="Nhập nội dung của bạn"></textarea>
+                        </div>
+                        <div class="col row justify-content-center">
+                            <div class="col-12 d-flex justify-content-center">
+                                <button class="w-50 p-2 bg-white rounded-pill fw-bold" type="submit">GỬI BÌNH
+                                    LUẬN</button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </main>
