--- a/index.html
+++ b/index.html
@@ -164,11 +164,10 @@
                     </a>
                 </div>
                 <hr class="m-0">
-
                 <div class="product d-flex justify-content-between my-3">
                     <div class="card mx-2 border-0">
                         <div class="img d-flex justify-content-center align-items-center py-4">
-                            <img src="./img/iphone14.webp" alt="">
+                            <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""></a>
                         </div>
                         <div class="card-body">
                             <div class="card-title text-black fw-bold">iPhone 14 Pro (256GB) - Chính hãng VN/A</div>
@@ -178,7 +177,7 @@
                     </div>
                     <div class="card mx-2 border-0">
                         <div class="img img d-flex justify-content-center align-items-center py-4">
-                            <img class="" src="./img/iphone14.webp" alt="">
+                            <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""></a>
                         </div>
                         <div class="card-body">
                             <div class="card-title text-black fw-bold">iPhone 14 Pro (256GB) - Chính hãng VN/A</div>
@@ -188,7 +187,7 @@
                     </div>
                     <div class="card mx-2 border-0">
                         <div class="img img d-flex justify-content-center align-items-center py-4">
-                            <img class="" src="./img/iphone14.webp" alt="">
+                            <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""></a>
                         </div>
                         <div class="card-body">
                             <div class="card-title text-black fw-bold">iPhone 14 Pro (256GB) - Chính hãng VN/A</div>
@@ -198,7 +197,7 @@
                     </div>
                     <div class="card mx-2 border-0">
                         <div class="img img d-flex justify-content-center align-items-center py-4">
-                            <img src="./img/iphone14.webp" alt="">
+                            <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""></a>
                         </div>
                         <div class="card-body">
                             <div class="card-title text-black fw-bold">iPhone 14 Pro (256GB) - Chính hãng VN/A</div>
@@ -208,7 +207,7 @@
                     </div>
                     <div class="card mx-2 border-0">
                         <div class="img img d-flex justify-content-center align-items-center py-4">
-                            <img src="./img/iphone14.webp" alt="">
+                            <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""></a>
                         </div>
                         <div class="card-body">
                             <div class="card-title text-black fw-bold">iPhone 14 Pro (256GB) - Chính hãng VN/A</div>
@@ -254,7 +253,7 @@
                 <div class="product d-flex justify-content-between my-3">
                     <div class="card mx-2 border-0">
                         <div class="img d-flex justify-content-center align-items-center py-4">
-                            <img src="./img/iphone14.webp" alt="">
+                            <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""></a>
                         </div>
                         <div class="card-body">
                             <div class="card-title text-black fw-bold">iPhone 14 Pro (256GB) - Chính hãng VN/A</div>
@@ -264,7 +263,7 @@
                     </div>
                     <div class="card mx-2 border-0">
                         <div class="img img d-flex justify-content-center align-items-center py-4">
-                            <img class="" src="./img/iphone14.webp" alt="">
+                            <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""></a>
                         </div>
                         <div class="card-body">
                             <div class="card-title text-black fw-bold">iPhone 14 Pro (256GB) - Chính hãng VN/A</div>
@@ -274,7 +273,7 @@
                     </div>
                     <div class="card mx-2 border-0">
                         <div class="img img d-flex justify-content-center align-items-center py-4">
-                            <img class="" src="./img/iphone14.webp" alt="">
+                            <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""></a>
                         </div>
                         <div class="card-body">
                             <div class="card-title text-black fw-bold">iPhone 14 Pro (256GB) - Chính hãng VN/A</div>
@@ -284,7 +283,7 @@
                     </div>
                     <div class="card mx-2 border-0">
                         <div class="img img d-flex justify-content-center align-items-center py-4">
-                            <img src="./img/iphone14.webp" alt="">
+                            <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""></a>
                         </div>
                         <div class="card-body">
                             <div class="card-title text-black fw-bold">iPhone 14 Pro (256GB) - Chính hãng VN/A</div>
@@ -294,7 +293,7 @@
                     </div>
                     <div class="card mx-2 border-0">
                         <div class="img img d-flex justify-content-center align-items-center py-4">
-                            <img src="./img/iphone14.webp" alt="">
+                            <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""></a>
                         </div>
                         <div class="card-body">
                             <div class="card-title text-black fw-bold">iPhone 14 Pro (256GB) - Chính hãng VN/A</div>
@@ -340,7 +339,7 @@
                 <div class="product d-flex justify-content-between my-3">
                     <div class="card mx-2 border-0">
                         <div class="img d-flex justify-content-center align-items-center py-4">
-                            <img src="./img/iphone14.webp" alt="">
+                            <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""></a>
                         </div>
                         <div class="card-body">
                             <div class="card-title text-black fw-bold">iPhone 14 Pro (256GB) - Chính hãng VN/A</div>
@@ -350,7 +349,7 @@
                     </div>
                     <div class="card mx-2 border-0">
                         <div class="img img d-flex justify-content-center align-items-center py-4">
-                            <img class="" src="./img/iphone14.webp" alt="">
+                            <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""></a>
                         </div>
                         <div class="card-body">
                             <div class="card-title text-black fw-bold">iPhone 14 Pro (256GB) - Chính hãng VN/A</div>
@@ -360,7 +359,7 @@
                     </div>
                     <div class="card mx-2 border-0">
                         <div class="img img d-flex justify-content-center align-items-center py-4">
-                            <img class="" src="./img/iphone14.webp" alt="">
+                            <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""></a>
                         </div>
                         <div class="card-body">
                             <div class="card-title text-black fw-bold">iPhone 14 Pro (256GB) - Chính hãng VN/A</div>
@@ -370,7 +369,7 @@
                     </div>
                     <div class="card mx-2 border-0">
                         <div class="img img d-flex justify-content-center align-items-center py-4">
-                            <img src="./img/iphone14.webp" alt="">
+                            <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""></a>
                         </div>
                         <div class="card-body">
                             <div class="card-title text-black fw-bold">iPhone 14 Pro (256GB) - Chính hãng VN/A</div>
@@ -380,7 +379,7 @@
                     </div>
                     <div class="card mx-2 border-0">
                         <div class="img img d-flex justify-content-center align-items-center py-4">
-                            <img src="./img/iphone14.webp" alt="">
+                            <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""></a>
                         </div>
                         <div class="card-body">
                             <div class="card-title text-black fw-bold">iPhone 14 Pro (256GB) - Chính hãng VN/A</div>
@@ -426,7 +425,7 @@
                 <div class="product d-flex justify-content-between my-3">
                     <div class="card mx-2 border-0">
                         <div class="img d-flex justify-content-center align-items-center py-4">
-                            <img src="./img/iphone14.webp" alt="">
+                            <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""></a>
                         </div>
                         <div class="card-body">
                             <div class="card-title text-black fw-bold">iPhone 14 Pro (256GB) - Chính hãng VN/A</div>
@@ -436,7 +435,7 @@
                     </div>
                     <div class="card mx-2 border-0">
                         <div class="img img d-flex justify-content-center align-items-center py-4">
-                            <img class="" src="./img/iphone14.webp" alt="">
+                            <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""></a>
                         </div>
                         <div class="card-body">
                             <div class="card-title text-black fw-bold">iPhone 14 Pro (256GB) - Chính hãng VN/A</div>
@@ -446,7 +445,7 @@
                     </div>
                     <div class="card mx-2 border-0">
                         <div class="img img d-flex justify-content-center align-items-center py-4">
-                            <img class="" src="./img/iphone14.webp" alt="">
+                            <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""></a>
                         </div>
                         <div class="card-body">
                             <div class="card-title text-black fw-bold">iPhone 14 Pro (256GB) - Chính hãng VN/A</div>
@@ -456,7 +455,7 @@
                     </div>
                     <div class="card mx-2 border-0">
                         <div class="img img d-flex justify-content-center align-items-center py-4">
-                            <img src="./img/iphone14.webp" alt="">
+                            <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""></a>
                         </div>
                         <div class="card-body">
                             <div class="card-title text-black fw-bold">iPhone 14 Pro (256GB) - Chính hãng VN/A</div>
@@ -466,7 +465,7 @@
                     </div>
                     <div class="card mx-2 border-0">
                         <div class="img img d-flex justify-content-center align-items-center py-4">
-                            <img src="./img/iphone14.webp" alt="">
+                            <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""></a>
                         </div>
                         <div class="card-body">
                             <div class="card-title text-black fw-bold">iPhone 14 Pro (256GB) - Chính hãng VN/A</div>
@@ -512,7 +511,7 @@
                 <div class="product d-flex justify-content-between my-3">
                     <div class="card mx-2 border-0">
                         <div class="img d-flex justify-content-center align-items-center py-4">
-                            <img src="./img/iphone14.webp" alt="">
+                            <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""></a>
                         </div>
                         <div class="card-body">
                             <div class="card-title text-black fw-bold">iPhone 14 Pro (256GB) - Chính hãng VN/A</div>
@@ -522,7 +521,7 @@
                     </div>
                     <div class="card mx-2 border-0">
                         <div class="img img d-flex justify-content-center align-items-center py-4">
-                            <img class="" src="./img/iphone14.webp" alt="">
+                            <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""></a>
                         </div>
                         <div class="card-body">
                             <div class="card-title text-black fw-bold">iPhone 14 Pro (256GB) - Chính hãng VN/A</div>
@@ -532,7 +531,7 @@
                     </div>
                     <div class="card mx-2 border-0">
                         <div class="img img d-flex justify-content-center align-items-center py-4">
-                            <img class="" src="./img/iphone14.webp" alt="">
+                            <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""></a>
                         </div>
                         <div class="card-body">
                             <div class="card-title text-black fw-bold">iPhone 14 Pro (256GB) - Chính hãng VN/A</div>
@@ -542,7 +541,7 @@
                     </div>
                     <div class="card mx-2 border-0">
                         <div class="img img d-flex justify-content-center align-items-center py-4">
-                            <img src="./img/iphone14.webp" alt="">
+                            <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""></a>
                         </div>
                         <div class="card-body">
                             <div class="card-title text-black fw-bold">iPhone 14 Pro (256GB) - Chính hãng VN/A</div>
@@ -552,7 +551,7 @@
                     </div>
                     <div class="card mx-2 border-0">
                         <div class="img img d-flex justify-content-center align-items-center py-4">
-                            <img src="./img/iphone14.webp" alt="">
+                            <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""></a>
                         </div>
                         <div class="card-body">
                             <div class="card-title text-black fw-bold">iPhone 14 Pro (256GB) - Chính hãng VN/A</div>
