--- a/DES_PRODUCT/iphone14.html
+++ b/DES_PRODUCT/iphone14.html
@@ -477,13 +477,13 @@
                         </div>
                     </div>
                     <div class="row mb-3 align-items-end">
-                        <div class="col">
+                        <div class="col-12 col-sm mb-3 mb-sm-0">
                             <textarea class="form-control shadow-none" name="" id="" rows="3"
                                 placeholder="Nhập nội dung của bạn"></textarea>
                         </div>
-                        <div class="col row justify-content-center">
+                        <div class="col-12 col-sm row justify-content-center">
                             <div class="col-12 d-flex justify-content-center">
-                                <button class="w-50 p-2 bg-white rounded-pill fw-bold" type="submit">GỬI BÌNH
+                                <button class="w-50 w-75 p-2 bg-white rounded-pill fw-bold" type="submit">GỬI BÌNH
                                     LUẬN</button>
                             </div>
                         </div>
